# safertrade

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_FAQ.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: stale.yml  tests.yml  welcome.yml
data/databases/: README.md
docs/: GETTING_STARTED.md  QUICKSTART.md
engines/: __init__.py  alert_processor.py  gas_price_optimizer.py  health_check.py  honeypot_checker.py  ohlcv_data_feed.py  oracle_manipulation_detector.py  pump_detector.py  stablecoin_depeg_monitor.py  token_holder_analyzer.py
examples/: basic_usage.py  honeypot_detection.py  multi_chain_monitoring.py  phishing_detection.py  pump_dump_detection.py  realtime_alerts.py  webhook_integration.py
logs/: README.md
schemas/: README.md  SCHEMA_PLAN.md  bridge_arbitrage_example.json  signal_example.json  signals_v1.json
shared/: __init__.py  alert_formatter.py  blockchain_utils.py  chains.py  config.py  database_config.py  db.py  env.py  logging_setup.py  metrics.py  paths.py  price_service.py  redis_client.py  stream_config.py  usd_calculator.py
shared/utils/: __init__.py  blockchain_explorer_utils.py  emoji_severity_system.py  rpc_pool.py
tests/: test_basic.py
